--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="main">
       <div class="collapse">
-        <div class="collapse__button">Collapse</div>
+        <div class="collapse__button">COLLAPSE</div>
         <div class="collapse__content">
           <p class="collapse__text">
             «Латынь из моды вышла ныне», – 
